--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -495,7 +495,7 @@
         <scene sceneID="mcg-Hx-Jb3">
             <objects>
                 <viewController id="0DP-EJ-cld" customClass="ViewController_2" customModule="MEMOO" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hBK-jm-Xp1">
+                    <view key="view" contentMode="scaleToFill" id="hBK-jm-Xp1" customClass="ArenasView" customModule="MEMOO" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -511,6 +511,13 @@
                                     <constraint firstAttribute="width" constant="7700" id="5DM-OY-hKd"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTe-Un-1g1">
+                                <rect key="frame" x="-200" y="0.0" width="3300" height="868"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="3300" id="LNa-k9-nz8"/>
+                                </constraints>
+                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="layer_1" translatesAutoresizingMaskIntoConstraints="NO" id="tfM-ou-CM8">
                                 <rect key="frame" x="-200" y="200" width="6000" height="368"/>
                                 <constraints>
@@ -522,21 +529,21 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bSF-Vi-VV4">
-                                    <size key="itemSize" width="263" height="409"/>
+                                    <size key="itemSize" width="200" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="40" minY="40" maxX="40" maxY="40"/>
+                                    <inset key="sectionInset" minX="40" minY="0.0" maxX="40" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoundCell" id="Xnj-8T-EBP" customClass="RoundCell" customModule="MEMOO" customModuleProvider="target">
-                                        <rect key="frame" x="40" y="79.5" width="263" height="409"/>
+                                        <rect key="frame" x="40" y="0.0" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="T0J-ch-fDT">
-                                            <rect key="frame" x="0.0" y="0.0" width="263" height="409"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhu-P7-hHC">
-                                                    <rect key="frame" x="0.0" y="73" width="263" height="263"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                     <color key="backgroundColor" white="1" alpha="0.50644143211920534" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="nhu-P7-hHC" secondAttribute="height" multiplier="1:1" id="2Tq-YJ-CjL"/>
@@ -551,7 +558,6 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="263" height="409"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -559,26 +565,30 @@
                         <viewLayoutGuide key="safeArea" id="Mjp-uc-VGE"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
+                            <constraint firstItem="GTe-Un-1g1" firstAttribute="top" secondItem="hBK-jm-Xp1" secondAttribute="top" id="2iA-jX-vCB"/>
                             <constraint firstAttribute="bottom" secondItem="KKd-eE-Tc2" secondAttribute="bottom" id="4Lb-sK-Wc4"/>
                             <constraint firstAttribute="bottom" secondItem="G6K-7n-tDg" secondAttribute="bottom" id="8KO-5C-3C8"/>
+                            <constraint firstItem="GTe-Un-1g1" firstAttribute="bottom" secondItem="hBK-jm-Xp1" secondAttribute="bottom" constant="300" id="Abr-eY-s1v"/>
                             <constraint firstItem="G6K-7n-tDg" firstAttribute="top" secondItem="hBK-jm-Xp1" secondAttribute="top" id="Ehb-YP-vfj"/>
                             <constraint firstItem="6ed-OT-vB7" firstAttribute="top" secondItem="Mjp-uc-VGE" secondAttribute="top" id="ILY-OC-ed1"/>
                             <constraint firstItem="6ed-OT-vB7" firstAttribute="trailing" secondItem="Mjp-uc-VGE" secondAttribute="trailing" id="LLP-SB-JBu"/>
                             <constraint firstItem="tfM-ou-CM8" firstAttribute="bottom" secondItem="hBK-jm-Xp1" secondAttribute="bottom" id="O5V-UU-amn"/>
                             <constraint firstItem="6ed-OT-vB7" firstAttribute="leading" secondItem="Mjp-uc-VGE" secondAttribute="leading" id="PuA-Wl-dGa"/>
                             <constraint firstItem="G6K-7n-tDg" firstAttribute="leading" secondItem="hBK-jm-Xp1" secondAttribute="leading" constant="-200" id="QsM-uE-dwg"/>
+                            <constraint firstItem="GTe-Un-1g1" firstAttribute="leading" secondItem="Mjp-uc-VGE" secondAttribute="leading" constant="-200" id="fFu-vO-UaW"/>
                             <constraint firstItem="6ed-OT-vB7" firstAttribute="bottom" secondItem="Mjp-uc-VGE" secondAttribute="bottom" id="hgb-Os-dDP"/>
                             <constraint firstItem="KKd-eE-Tc2" firstAttribute="leading" secondItem="hBK-jm-Xp1" secondAttribute="leading" constant="-200" id="ige-gX-DOg"/>
                             <constraint firstItem="KKd-eE-Tc2" firstAttribute="top" secondItem="hBK-jm-Xp1" secondAttribute="top" id="jgL-RI-VJj"/>
                             <constraint firstItem="tfM-ou-CM8" firstAttribute="leading" secondItem="hBK-jm-Xp1" secondAttribute="leading" constant="-200" id="xOC-YH-IGq"/>
                         </constraints>
+                        <connections>
+                            <outlet property="collectionRound" destination="6ed-OT-vB7" id="1nD-fi-689"/>
+                            <outlet property="layer_1" destination="tfM-ou-CM8" id="uqi-hF-PWi"/>
+                            <outlet property="layer_2" destination="G6K-7n-tDg" id="XQg-R2-xJi"/>
+                            <outlet property="layer_3" destination="KKd-eE-Tc2" id="sPi-aV-4fE"/>
+                            <outlet property="viewForSKEmitter" destination="GTe-Un-1g1" id="sQD-fP-aZE"/>
+                        </connections>
                     </view>
-                    <connections>
-                        <outlet property="collectionRound" destination="6ed-OT-vB7" id="x3o-QV-tT3"/>
-                        <outlet property="layer_1" destination="tfM-ou-CM8" id="qnZ-Md-G5S"/>
-                        <outlet property="layer_2" destination="G6K-7n-tDg" id="9JG-ll-5Q6"/>
-                        <outlet property="layer_3" destination="KKd-eE-Tc2" id="JXQ-LP-Ndo"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s6P-py-56E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
